--- a/www/Styles/less/theme.less
+++ b/www/Styles/less/theme.less
@@ -2,7 +2,7 @@
 .accent-color, a 	{ color:#24A0DA; }
 
 .tile  { background: @metro-done; border: 1px solid lighten(@metro-done, 10%); }
-.wide  {
+.metro-tile-wide  {
 	background: @metro-lightblue; border: 1px solid lighten(@metro-lightblue, 10%);
 	
 	&.pinned  { background: @metro-lightgreen; border: 1px solid lighten(@metro-lightgreen, 10%); }
@@ -32,7 +32,7 @@ div.pivot {
 	.metro-loading { background: #30508B; color: white; }
 
 	.tile { background: @metro-blue; border: 1px solid lighten(@metro-blue, 10%); }
-	.wide {
+	.metro-tile-wide {
 		background: @metro-lightblue; border: 1px solid lighten(@metro-lightblue, 10%);
 
 		&.pinned { background: @metro-orange; border: 1px solid lighten(@metro-orange, 10%); }
@@ -51,7 +51,7 @@ div.pivot {
 	.metro-loading { background: url("@{img-folder}/bg/bg_1.jpg"); }
 
 	.tile { background: @metro-greenblue; border: 1px solid lighten(@metro-greenblue, 10%); }
-	.wide  {
+	.metro-tile-wide  {
 		background: @metro-green; border: 1px solid lighten(@metro-green, 10%);
 
 		&.pinned { background: @metro-orange; border: 1px solid lighten(@metro-orange, 10%); }
@@ -64,7 +64,7 @@ div.pivot {
 	.metro-loading { background: url("@{img-folder}/bg/bg_2.jpg"); }
 
 	.tile { background: @metro-done; border: 1px solid lighten(@metro-done, 5%); }
-	.wide  {
+	.metro-tile-wide  {
 		background: @metro-lightblue; border: 1px solid lighten(@metro-lightblue, 10%);
 
 		&.pinned { background: @metro-lightgreen; border: 1px solid lighten(@metro-lightgreen, 5%); }
@@ -77,7 +77,7 @@ div.pivot {
 	.metro-loading { background: url("@{img-folder}/bg/bg_3.jpg"); }
 
 	.tile  { background: @metro-blue; border: 1px solid lighten(@metro-blue, 5%); }
-	.wide  {
+	.metro-tile-wide  {
 		background: @metro-lightgreen; border: 1px solid lighten(@metro-lightgreen, 10%);
 
 		&.pinned  { background: @metro-done; border: 1px solid lighten(@metro-done, 5%); }
@@ -96,7 +96,7 @@ div.pivot {
 	.metro-loading { background: url("@{img-folder}/bg/bg_5.jpg"); }
 	
 	.tile  { background: @metro-darkorange; border: 1px solid lighten(@metro-darkorange, 10%); }
-	.wide  {
+	.metro-tile-wide  {
 		background: @metro-orange; border: 1px solid lighten(@metro-orange, 10%);
 
 		&.pinned  { background: @metro-lightred; border: 1px solid lighten(@metro-lightred, 10%); }
