--- a/www/Styles/metro.less
+++ b/www/Styles/metro.less
@@ -63,6 +63,14 @@ p               	{ margin: 0 0 4px; font-size: 16px; line-height: 21px; }
 .noclick 			{ color: #838383; }
 .nomargin 			{ margin: 0; }
 
+.color-blue 			{ color: #24A0DA; }
+.color-darkblue 		{ color: #293f7b; }
+.color-red 			{ color: #800000; }
+.color-lightred 		{ color: #d64d34; }
+.color-orange 		{ color: #dd9616; }
+.color-purple 		{ color: #69349c; }
+.color-darkpink 		{ color: #b71c46; }
+
 .abs-right 			{ .position(absolute, auto, 0); }
 
 .inactive {
